# Gawake

./: .gitignore  .gitmodules  io.github.gawake.Gawake.json  meson.build  meson_options.txt
data/: io.github.gawake.Gawake.desktop.in  io.github.gawake.Gawake.gschema.xml  io.github.gawake.Gawake.metainfo.xml.in  io.github.gawake.Gawake.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in
src/: custom-schedule-face.c  custom-schedule-face.h  custom-schedule-face.ui  days-row.c  days-row.h  days-row.ui  error-dialog.c  error-dialog.h  error-dialog.ui  gawake-application.c  gawake-preferences.c  gawake-preferences.h  gawake-preferences.ui  gawake-window.c  gawake-window.ui  gawake.gresource.xml  main.c  meson.build  mode-row.c  mode-row.h  mode-row.ui  rule-face.c  rule-face.h  rule-face.ui  rule-row.c  rule-row.h  rule-row.ui  rule-setup-dialog-add.c  rule-setup-dialog-add.h  rule-setup-dialog-edit.c  rule-setup-dialog-edit.h  rule-setup-dialog-private.h  rule-setup-dialog.c  rule-setup-dialog.h  rule-setup-dialog.ui  schedule-countdown.c  schedule-countdown.h  schedule-countdown.ui  style.css  time-chooser.c  (+2 more)
